# Calais

./: LICENSE  README.md  chat.py  client.py  content_printer.py  main.py  pyproject.toml  response.py  system_prompt.py
calais/: chat.py  content_printer.py  main.py
tests/: test_chat.py  test_client.py  test_content_printer.py  test_main.py  test_response.py
